openshift/calendar-ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calendar-ui
  labels:
    app: calendar-ui
  annotations:
    image.openshift.io/triggers: |
      [
        {
          "from": {
            "kind": "ImageStreamTag",
            "name": "calendar-ui:latest"
          },
          "fieldPath": "spec.template.spec.containers[?(@.name=='calendar-ui')].image"
        }
      ]
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calendar-ui
  template:
    metadata:
      labels:
        app: calendar-ui
    spec:
      containers:
        - name: calendar-ui
          image: image-registry.openshift-image-registry.svc:5000/b3237c-dev/calendar-ui:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              protocol: TCP
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /ready
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 20
