openshift/calendar-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calendar-ui
spec:
  selector:
    app: calendar-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
      name: http
