openshift/calendar-ui/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: calendar-ui
spec:
  to:
    kind: Service
    name: calendar-ui
  port:
    targetPort: http
  tls:
    termination: edge
